search result route working

--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -3,7 +3,7 @@
 <ul>
     {{#each venue}}
     <li>
-        <p>{{this.id}}. {{this.name}
-        </p>
+        {{id}}: {{name}}
     </li>
+    {{/each}}
 </ul>
