--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/assets/js/scripts.js"></script>
+	{{!-- <script src="/assets/js/scripts.js"></script> --}}
 	<title>venUser</title>
 </head>
 
