foursquare data rendering through all routes

--- a/views/select.handlebars
+++ b/views/select.handlebars
@@ -1,3 +1,5 @@
 <h2>SELECTED VENUE</h2>
-<p>{{this.id}}. {{this.venue}}</p>
+<p>{{venueInfo.name}}</p>
+
+{{!-- <p>{{reviews.name}}: {{reviews.content}}</p> --}}
 
