--- a/views/select.handlebars
+++ b/views/select.handlebars
@@ -1,5 +1,6 @@
 <h2>SELECTED VENUE</h2>
 <p>{{venueInfo.name}}</p>
+<p>{{reviews.contnet}}</p>
 
 {{!-- <p>{{reviews.name}}: {{reviews.content}}</p> --}}
 
