all routing is actually working

--- a/views/select.handlebars
+++ b/views/select.handlebars
@@ -1,6 +1,6 @@
 <h2>SELECTED VENUE</h2>
-<p>{{venueInfo.name}}</p>
-<p>{{reviews.contnet}}</p>
+<p>{{venueObj.venueInfo.name}}</p>
+<p>{{venueObj.reviews.content}}</p>
 
 {{!-- <p>{{reviews.name}}: {{reviews.content}}</p> --}}
 
