--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,9 +1,24 @@
-<h1>Venues</h1>
+ <div class="jumbotron text-center bg-dark text-white" id="mainPageHeader" >
+        <div class="container">
+          <h1 class="display-3" id="mainPageHeaderFont"><strong>venUser</strong></h1>
+        </div>
+      </div>
+    
+    <table class="table table-dark">
+        <thead>
+            <tr>
+                <th scope="col"></th>
+                <th scope="col">#</th>
+                <th scope="col">Venue</th>
+            </tr>
+        </thead>
+        <tbody>
+                {{#each venue}}
+            <tr data-id={{id}}>
+                <td>{{name}}</td>
+                <td>{{address}}</td>
+                </tr>
+                {{/each}}
+        </tbody>
+    </table>
 
-<ul>
-    {{#each venue}}
-    <li>
-        <p>{{this.id}}. {{this.name}
-        </p>
-    </li>
-</ul>
