--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,28 @@
+<div class="jumbotron text-center bg-dark text-white" id="mainPageHeader">
+    <div class="container">
+        <h1 class="display-3" id="mainPageHeaderFont">
+            <strong>venUser</strong>
+        </h1>
+    </div>
+</div>
+<div class="d-flex justify-content-center text-black" id="searchBar">
+    <div class="card" style="width: 50rem;">
+        <div class="card-body">
+            <h2 class="card-title">
+                <strong>venUser:</strong> Search Location (City, State, Venue)</h2>
+
+            <form class="form-inline" action="/action_page.php">
+                <label for="city">City:</label>
+                <input type="search" class="form-control" id="city">
+                <label for="state">State:</label>
+                <input type="search" class="form-control" id="state">
+                <label for="venue">Venue:</label>
+                <input type="search" class="form-control" id="venue">
+                <button type="button" class="btn btn-secondary btn-lg" id="searchSubmit" type="submit">
+                    <strong>SUBMIT SEARCH</strong>
+                </button>
+            </form>
 
 
-<h2> venUser: Search Location/Venue </h2>
-<form>
-    <textarea type="text" cityName="city", stateName="state", venueName="venue"></textarea>
-    <button type="button" class="btn btn-secondary btn-lg" type="submit">SUBMIT SEARCH</button>
-</form>
-
+        </div>
+    </div>
