--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,8 @@
 	<meta name= "viewport" content= "width=device-width, initial-scale=1">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+	 <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+	<link rel="stylesheet" href="/public/css/style.css" type="text/css" />
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/assets/js/scripts.js"></script>
 	<title>venUser</title>
