--- a/views/select.handlebars
+++ b/views/select.handlebars
@@ -23,7 +23,7 @@
     <div class="row">
         <div class="col-sm-6">
             <h4>
-                <a href="{{venueObj.venueInfo.url}}"></a>
+                <a href="{{venueObj.venueInfo.url}}">{{venueObj.venueInfo.url}}</a>
             </h4>
         </div>
         <div class="col-sm-6">
@@ -53,7 +53,7 @@
     <br>
 
     <!-- REVIEW/TIP DISPLAY -->
-    {{#each.review}}
+    {{#each venueObj.review}}
     <div class="row text-center" id="reviewHeader">
         <div class="col-sm-12">
             <h2>Add a Review:</h2>
