--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,12 @@
-<div class="jumbotron text-center bg-dark text-white" id="mainPageHeader">
-    <div class="container">
-        <h1 class="display-3" id="mainPageHeaderFont">
-            <strong>venUser</strong>
-        </h1>
-    </div>
-</div>
+
+<div class="container-fluid" id="mainBody">
+        <div class="jumbotron text-center bg-dark text-white" id="mainPageHeader">
+            <div class="container">
+                <h1 class="display-3" id="mainPageHeaderFont">
+                    <strong>...venUser ..</strong>
+                </h1>
+            </div>
+        </div>
 <div class="d-flex justify-content-center text-black" id="searchBar">
     <div class="card" style="width: 50rem;">
         <div class="card-body">
