fixed css link on main.handlebars

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,4 +1,7 @@
-<head>
+
+
+<!--will this be taken care of by the main.handlebars?
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -7,7 +10,8 @@
     <title>venUser</title>
 </head>
 
-<body>
+<body>--> 
+
     <form id="venueForm" method="post">
         <p>Fill out the information below to write review or tip =)</p>
 
@@ -19,8 +23,8 @@
         <br>
         <br>
 
-        <label for="Anthors Name">Anthor's Name:</label>
-        <input type="text" name="Anthors Name" id="Author_Name_fm" placeholder="Reviewer Name">
+        <label for="Authors Name">Author's Name:</label>
+        <input type="text" name="Authors Name" id="Author_Name_fm" placeholder="Reviewer Name">
         <br>
         <br>
 
@@ -55,4 +59,4 @@
      <!-- Custom Script -->
     <script src="../js/form.js" type="text/javascript"></script>
 
-</body>
+<!--</body>-->
