--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 	 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 	 <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-	<link rel="stylesheet" href="/public/css/style.css" type="text/css" />
+	<link rel="stylesheet" href="/css/style.css" type="text/css" />
 	<script src="https://code.jquery.com/jquery.js"></script>
 	{{!-- <script src="/assets/js/scripts.js"></script> --}}
 	<title>venUser</title>
