got results page working

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,19 +3,23 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name= "viewport" content= "width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-	 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-	 <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-	<link rel="stylesheet" href="/public/css/style.css" type="text/css" />
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+	<link rel="stylesheet" href="/css/style.css" type="text/css" />
 	<script src="https://code.jquery.com/jquery.js"></script>
-	{{!-- <script src="/assets/js/scripts.js"></script> --}}
+	{{!-- <script src="/js/venueSearch.js"></script>
+	<script src="/js/venueResult.js"></script>
+	<script src="/js/form.js"></script> --}}
+	<script src="/js/search.js"></script>
 	<title>venUser</title>
 </head>
 
 <body>
 	{{{ body }}}
+	{{!-- <script type="text/javascript" src="/js/bundle.js"></script> --}}
 </body>
 
 </html>
