--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,16 +13,14 @@
             <h2 class="card-title">
                 <strong>venUser:</strong> Search Location (City, State, Venue)</h2>
 
-            <form class="form-inline" action="/action_page.php">
+            <form class="form-inline" action="/api/retrievelist" method="post">
                 <label for="city">City:</label>
                 <input type="search" class="form-control" id="city">
                 <label for="state">State:</label>
                 <input type="search" class="form-control" id="state">
                 <label for="venue">Venue:</label>
                 <input type="search" class="form-control" id="venue">
-                <button type="button" class="btn btn-secondary btn-lg" id="searchSubmit" type="submit">
-                    <strong>SUBMIT SEARCH</strong>
-                </button>
+                <input class="btn btn-secondary btn-lg" id="searchSubmit" type="submit">  
             </form>
 
 
