--- a/views/select.handlebars
+++ b/views/select.handlebars
@@ -46,27 +46,26 @@
 <div class="row">
     <div class="col-sm-4">
         <h5>
-            <a href="{{venueObj.venueInfo.facebook}}"></a>
+            <a href="{{venueObj.venueInfo.facebook}}">{{venueObj.venueInfo.facebook}}</a>
         </h5>
     </div>
 
     <div class="col-sm-4">
         <h5>
-            <a href="{{venueObj.venueInfo.twitter}}"></a>
+            <a href="{{venueObj.venueInfo.twitter}}">{{venueObj.venueInfo.twitter}}</a>
         </h5>
     </div>
     <div class="col-sm-4">
         <h5>
-            <a href="{{venueObj.venueInfo.instagram}}"></a>
+            <a href="{{venueObj.venueInfo.instagram}}">{{venueObj.venueInfo.instagram}}</a>
         </h5>
-
     </div>
 </div>
 <br>
 <br>
 
 <!-- REVIEW/TIP DISPLAY -->
-{{#each.review}}
+{{#each venuObj.review}}
 <div class="row text-center" id="reviewHeader">
     <div class="col-sm-12">
         <h2>Add a Review:</h2>
@@ -76,9 +75,9 @@
 <div class="row" id="reviewArea"></div>
 <div class="col-sm-3"></div>
 <div class="col-sm-3">
-    <a href="{{venueObj.venueInfo.review.name_author}}"></a>
+    <a href="{{venueObj.review.name_author}}"></a>
 </div>
-<div class="col-sm-3">{{venueObj.venueInfo.review.content}} </div>
+<div class="col-sm-3">{{venueObj.review.content}} </div>
 <div class="col-sm-3"></div>
 {{/each}}
 </div>
