ALL ROUTES WORKING

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,7 @@
             <h2 class="card-title">
                 <strong>venUser:</strong> Search Location (City, State, Venue)</h2>
 
-            <form class="form-inline" action="/api/retrievelist" method="post">
+            <form class="form-inline" action="/venuelist" method="post">
                 <label for="city">City:</label>
                 <input type="search" class="form-control" id="city">
                 <label for="state">State:</label>
