can take in inputs for search

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,11 +15,11 @@
 
             <form class="form-inline" action="/venuelist" method="post">
                 <label for="city">City:</label>
-                <input type="search" class="form-control" id="city">
+                <input type="search" class="form-control" name="city" id="city">
                 <label for="state">State:</label>
-                <input type="search" class="form-control" id="state">
+                <input type="search" class="form-control" name="state" id="state">
                 <label for="venue">Venue:</label>
-                <input type="search" class="form-control" id="venue">
+                <input type="search" class="form-control" name="venue" id="venue">
                 <input class="btn btn-secondary btn-lg" id="searchSubmit" type="submit">  
             </form>
 
