--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,7 +30,11 @@
     
  }
 
- 
+ #resultTable  {
+    width: 800px;
+    height: 600px;
+    margin-left: 230px;
+ }
 
  .card-title  {
      font-size: 75px;
@@ -59,6 +63,19 @@ label  {
     font-size: 40px;
     text-decoration-line: center;
  }
+
+ #city  {
+
+}
+
+#state  {
+   
+
+}
+
+#venue  {
+
+}
 
  #bottomBuisness {
      background-color: black;
