--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-	 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-	 <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 	<link rel="stylesheet" href="/css/style.css" type="text/css" />
-	<script src="https://code.jquery.com/jquery.js"></script>
-	{{!-- <script src="/js/venueSearch.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+	<script src="https://code.jquery.com/jquery.js"></script> {{!--
+	<script src="/js/venueSearch.js"></script>
 	<script src="/js/venueResult.js"></script>
 	<script src="/js/form.js"></script> --}}
 	<script src="/js/search.js"></script>
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-	{{{ body }}}
-	{{!-- <script type="text/javascript" src="/js/bundle.js"></script> --}}
+	{{{ body }}} {{!--
+	<script type="text/javascript" src="/js/bundle.js"></script> --}}
 </body>
 
 </html>
