--- a/views/select.handlebars
+++ b/views/select.handlebars
@@ -65,19 +65,74 @@
 <br>
 
 <!-- REVIEW/TIP DISPLAY -->
-{{#each venuObj.review}}
+
 <div class="row text-center" id="reviewHeader">
     <div class="col-sm-12">
         <h2>Add a Review:</h2>
     </div>
 </div>
 <br>
+{{#each venueObj}}
 <div class="row" id="reviewArea"></div>
 <div class="col-sm-3"></div>
 <div class="col-sm-3">
-    <a href="{{venueObj.review.name_author}}"></a>
+{{venueObj.review}}"
 </div>
-<div class="col-sm-3">{{venueObj.review.content}} </div>
+<div class="col-sm-3">
+    {{venueObj.review}} 
+    </div>
 <div class="col-sm-3"></div>
 {{/each}}
 </div>
+<div class ="row">
+    <div class ="col-sm-12">
+    <div class ="card">
+
+    <form id="venueForm" method="post">
+        <p>Fill out the information below to write review or tip =)</p>
+    
+        <h2>{{venueObj.venueInfo.name}}</h2>
+        <input type="text" name="Venue Name" id="venueid_fm" value={{venueId}}>
+    
+        <!--venue id will come from ajax call-->
+    
+        <br>
+        <br>
+    
+        <label for="Authors Name">Author's Name:</label>
+        <input type="text" name="Authors Name" id="Author_Name_fm" placeholder="Reviewer Name">
+        <br>
+        <br>
+    
+        <label for="category">Category:</label>
+        <select name="category" id="category_fm">
+            <option value="Review">Review</option>
+            <option value="Tip">Tips</option>
+        </select>
+        <br>
+        <br>
+        <label for="content">Content:</label>
+        <br>
+        <textarea class="form-control" rows="10" cols="30" id="content_fm">
+        write content in here
+        </textarea>
+        <br>
+        <br>
+        <label for="rating_venue">Venue Rating Stars!</label>
+        <select name="rating_venue" id="rating_venue_fm">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+        </select>
+        <br>
+        <br>
+    
+        <button type="submit" id="formSubmit">Submit a Tip or Review</button>
+    </form>
+    </div>
+    </div>
+</div>
+    <!-- Custom Script -->
+    <script src="../js/form.js" type="text/javascript"></script>
