--- a/views/select.handlebars
+++ b/views/select.handlebars
@@ -28,120 +28,270 @@
 
     <div class="col-sm-6">
         <h4>{{venueObj.venueInfo.address}}</h4>
+        <br>
+        <div class="row">
+            <div class="col-sm-6">
+                <h4>
+                    <a href="{{venueObj.venueInfo.url}}">{{venueObj.venueInfo.url}}</a>
+                </h4>
+            </div>
+            <div class="col-sm-6">
+                <h4>{{venueObj.venueInfo.address}}</h4>
+            </div>
+
+        </div>
+    </div>
+    <br>
     <br>
     <div class="row">
-        <div class="col-sm-6">
-            <h4>
-                <a href="{{venueObj.venueInfo.url}}">{{venueObj.venueInfo.url}}</a>
-            </h4>
-        </div>
-        <div class="col-sm-6">
-            <h4>{{venueObj.venueInfo.address}}</h4>
+        <div class="col-sm-4">
+            <h5>
+                <a href="{{venueObj.venueInfo.facebook}}">{{venueObj.venueInfo.facebook}}</a>
+            </h5>
         </div>
 
+        <div class="col-sm-4">
+            <h5>
+                <a href="{{venueObj.venueInfo.twitter}}">{{venueObj.venueInfo.twitter}}</a>
+            </h5>
+        </div>
+        <div class="col-sm-4">
+            <h5>
+                <a href="{{venueObj.venueInfo.instagram}}">{{venueObj.venueInfo.instagram}}</a>
+            </h5>
+        </div>
     </div>
-</div>
-<br>
-<br>
-<div class="row">
-    <div class="col-sm-4">
-        <h5>
-            <a href="{{venueObj.venueInfo.facebook}}">{{venueObj.venueInfo.facebook}}</a>
-        </h5>
+    <br>
+    <br>
+
+    <!-- REVIEW/TIP DISPLAY -->
+    <div class="container" id="reviewArea">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card centered">
+                    <h2>Reviews and Tips for {{venueObj.venueInfo.name}}</h2>
+                    {{#each reviewObj}}
+                    <div class="row" id="reviewArea">
+                        <div class="card centered">
+                            <div class="col-sm-3">
+                                {{reviewObj.name_author}}"
+                            </div>
+                            <div class="col-sm-3">
+                                {{reviewObj.category}}
+                            </div>
+                            <div class="col-sm-3">
+                                {{reviewObj.content}}
+                            </div>
+                            <div class="col-sm-3">
+                                {{reviewObj.rating_venue}}
+                            </div>
+                        </div>
+                    </div>
+                    {{/each}}
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <h3>Write a Review</h3>
+                <form id="venueForm" method="post">
+                    <h2>{{venueObj.venueInfo.name}}</h2>
+                    <input type="text" name="Venue Name" id="venueid_fm" value="{{venueId}}" placeholder="{{venueId}}">
+                    <br>
+                    <br>
+                    <label for="Authors Name">Author's Name:</label>
+                    <input type="text" name="Authors Name" id="Author_Name_fm" placeholder="Reviewer Name">
+                    <br>
+                    <br>
+                    <label for="category">Category:</label>
+                    <select name="category" id="category_fm">
+                        <option value="Review">Review</option>
+                        <option value="Tip">Tips</option>
+                    </select>
+                    <br>
+                    <br>
+                    <label for="content">Content:</label>
+                    <br>
+                    <textarea class="form-control" rows="10" cols="30" id="content_fm"></textarea>
+                    <br>
+                    <br>
+                    <label for="rating_venue">Venue Rating Stars!</label>
+                    <select name="rating_venue" id="rating_venue_fm">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
+                    <br>
+                    <br>
+
+                    <button type="submit" id="formSubmit">Submit a Tip or Review</button>
+                </form>
+            </div>
+        </div>
     </div>
 
-    <div class="col-sm-4">
-        <h5>
-            <a href="{{venueObj.venueInfo.twitter}}">{{venueObj.venueInfo.twitter}}</a>
-        </h5>
-    </div>
-    <div class="col-sm-4">
-        <h5>
-            <a href="{{venueObj.venueInfo.instagram}}">{{venueObj.venueInfo.instagram}}</a>
-        </h5>
-    </div>
-</div>
-<br>
-<br>
+    {{!--
+    <div class="container" id="overallReviewArea">
+        <ul class="nav nav-pills">
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="pill" href="#reviews">Reviews</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="pill" href="#writeReview">Write a Review</a>
+            </li>
+        </ul>
+        <div class="tab-content">
+            <div id="reviews" class="container tab-pane active">
+                <br />
+                <div class="row text-center" id="reviewHeader">
+                    <div class="col-sm-12">
+                        <div class="card centered">
+                            <h2>Reviews and Tips for {{venueObj.venueInfo.name}}</h2>
+                        </div>
+                    </div>
+                </div> {{!--
+                <br> --}} {{#each reviewObj}}
+                <div class="row" id="reviewArea">
+                    <div class="card centered">
+                        <div class="col-sm-3">
+                            {{reviewObj.name_author}}"
+                        </div>
+                        <div class="col-sm-3">
+                            {{reviewObj.category}}
+                        </div>
+                        <div class="col-sm-3">
+                            {{reviewObj.content}}
+                        </div>
+                        <div class="col-sm-3">
+                            {{reviewObj.rating_venue}}
+                        </div>
+                    </div>
+                </div>
+                {{/each}}
 
-<!-- REVIEW/TIP DISPLAY -->
+            </div>
+            <div id="writeReview" class="container tab-pane fade">
+                <br /> {{!--
+                <div class="row justify-content-center" id="writeReviewArea">
+                    <div class="col-sm-12">
+                        <div class="card centered"> --}}
+                            <form id="venueForm" method="post">
+                                <h2>{{venueObj.venueInfo.name}}</h2>
+                                <input type="text" name="Venue Name" id="venueid_fm" value="{{venueId}}" placeholder="{{venueId}}">
+                                <br>
+                                <br>
+                                <label for="Authors Name">Author's Name:</label>
+                                <input type="text" name="Authors Name" id="Author_Name_fm" placeholder="Reviewer Name">
+                                <br>
+                                <br>
+                                <label for="category">Category:</label>
+                                <select name="category" id="category_fm">
+                                    <option value="Review">Review</option>
+                                    <option value="Tip">Tips</option>
+                                </select>
+                                <br>
+                                <br>
+                                <label for="content">Content:</label>
+                                <br>
+                                <textarea class="form-control" rows="10" cols="30" id="content_fm"></textarea>
+                                <br>
+                                <br>
+                                <label for="rating_venue">Venue Rating Stars!</label>
+                                <select name="rating_venue" id="rating_venue_fm">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                </select>
+                                <br>
+                                <br>
 
-<div class="row text-center" id="reviewHeader">
-    <div class="col-sm-12">
-        <div class="card centered">
-        <h2>Reviews and Tips for {{venueObj.venueInfo.name}}</h2>
-    </div>>
-</div>
-<br>
-{{#each reviewObj}}
-<div class="row" id="reviewArea">
-<div class="card centered">
+                                <button type="submit" id="formSubmit">Submit a Tip or Review</button>
+                            </form>
+                            {{!-- </div>
+                    </div>
+                </div> --}}
+            </div>
+        </div>
+    </div> --}} {{!--
+    <div class="row text-center" id="reviewHeader">
+        <div class="col-sm-12">
+            <div class="card centered">
+                <h2>Reviews and Tips for {{venueObj.venueInfo.name}}</h2>
+            </div>
+        </div>
+        <br> {{#each reviewObj}}
+        <div class="row" id="reviewArea">
+            <div class="card centered">
 
-<div class="col-sm-3">
+                <div class="col-sm-3">
+                    {{reviewObj.name_author}}"
 
-</div>
+                </div>
 
-<div class="col-sm-3">
-{{reviewObj.review}}"
-</div>
+                <div class="col-sm-3">
+                    {{reviewObj.category}}
 
-<div class="col-sm-3">
-    {{reviewObj.review}} 
-</div>
-<div class="col-sm-3">
+                </div>
 
-</div>
-{{/each}}
-</div>
-</div>
-<div class ="row justify-content-center">
-    <div class ="col-sm-10">
-    <div class ="card centered">
+                <div class="col-sm-3">
+                    {{reviewObj.content}}
+                </div>
+                <div class="col-sm-3">
+                    {{reviewObj.rating_venue}}
+                </div>
+                {{/each}}
+            </div>
+        </div> --}} {{!--
+        <div class="row justify-content-center">
+            <div class="col-sm-10">
+                <div class="card centered">
 
-    <form id="venueForm" method="post">
-    
-        <h2>{{venueObj.venueInfo.name}}</h2>
-        <input type="text" name="Venue Name" id="venueid_fm" value="{{venueId}}" placeholder="{{venueId}}">
-    
-        <!--venue id will come from ajax call-->
-    
-        <br>
-        <br>
-    
-        <label for="Authors Name">Author's Name:</label>
-        <input type="text" name="Authors Name" id="Author_Name_fm" placeholder="Reviewer Name">
-        <br>
-        <br>
-    
-        <label for="category">Category:</label>
-        <select name="category" id="category_fm">
-            <option value="Review">Review</option>
-            <option value="Tip">Tips</option>
-        </select>
-        <br>
-        <br>
-        <label for="content">Content:</label>
-        <br>
-        <textarea class="form-control" rows="10" cols="30" id="content_fm">
+                    <form id="venueForm" method="post">
+
+                        <h2>{{venueObj.venueInfo.name}}</h2>
+                        <input type="text" name="Venue Name" id="venueid_fm" value="{{venueId}}" placeholder="{{venueId}}">
+
+                        <!--venue id will come from ajax call-->
+
+                        <br>
+                        <br>
+
+                        <label for="Authors Name">Author's Name:</label>
+                        <input type="text" name="Authors Name" id="Author_Name_fm" placeholder="Reviewer Name">
+                        <br>
+                        <br>
+
+                        <label for="category">Category:</label>
+                        <select name="category" id="category_fm">
+                            <option value="Review">Review</option>
+                            <option value="Tip">Tips</option>
+                        </select>
+                        <br>
+                        <br>
+                        <label for="content">Content:</label>
+                        <br>
+                        <textarea class="form-control" rows="10" cols="30" id="content_fm">
         write content in here
         </textarea>
-        <br>
-        <br>
-        <label for="rating_venue">Venue Rating Stars!</label>
-        <select name="rating_venue" id="rating_venue_fm">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-        </select>
-        <br>
-        <br>
-    
-        <button type="submit" id="formSubmit">Submit a Tip or Review</button>
-    </form>
-    </div>
-    </div>
-</div>
-    <!-- Custom Script -->
-    <script src="../js/form.js" type="text/javascript"></script>
+                        <br>
+                        <br>
+                        <label for="rating_venue">Venue Rating Stars!</label>
+                        <select name="rating_venue" id="rating_venue_fm">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+                        <br>
+                        <br>
+
+                        <button type="submit" id="formSubmit">Submit a Tip or Review</button>
+                    </form>
+                </div>
+            </div>
+        </div> --}}
+        <!-- Custom Script -->
+        <script src="../js/form.js" type="text/javascript"></script>
