added search bar to top of select page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -136,3 +136,36 @@ label  {
  #chooseVenueButton:hover {
     color: blue;
  }
+
+ #newSearchBar {
+     height: 100px;
+     margin-bottom: 10px;
+ }
+
+ #newSearchSubmit { 
+    width:70px;
+    height: 40px; 
+    margin-left: 15px; 
+    font-family: 'Amatic SC', cursive;
+    font-style: bold;
+    font-size: 16px;
+    text-decoration: center;
+ }
+
+ #newCity, #newState, #newVenue  {
+    font-family: 'Amatic SC', cursive;
+    font-style: bolder;
+    font-size: 14px;
+ }
+
+#newSearchTitle {
+    margin-right: 15px;
+}
+
+#selectedPageHeader {
+    color: white;
+    font-size: 150px;
+    font-family: 'Permanent Marker', cursive;
+    margin-top: 20px;
+    margin-bottom: 0px;
+ }
