--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,14 +17,14 @@
 
  #mainPageHeaderFont {
     color: white;
-    font-size: 175px;
+    font-size: 10rem;
     font-family: 'Permanent Marker', cursive; 
     
  }
 
  #mainPageHeader {
     color: white;
-    font-size: 150px;
+    font-size: 10rem;
     font-family: 'Permanent Marker', cursive;
     margin-top: 20px;
     
@@ -86,6 +86,7 @@ label  {
     font-style: bold;
     font-size: 30px;
     text-decoration: center;
+    color: black;
 
  }
 
