Added logic to get average rating

--- a/views/select.handlebars
+++ b/views/select.handlebars
@@ -33,13 +33,13 @@
     <div class="row">
         <div class="col-sm-6">
             <h1>{{venueObj.venueInfo.name}}</h1>
-            <br />
+            <h4>Rating: {{venueObj.venueRating}}</h4>
             <h4>
                 <a href="{{venueObj.venueInfo.url}}" target="blank">{{venueObj.venueInfo.url}}</a>
             </h4>
-            <h5>
+            <h4>
                 <a href="https://www.facebook.com/{{venueObj.venueInfo.facebook}}" target="blank">facebook.com/{{venueObj.venueInfo.facebook}}</a>
-            </h5>
+            </h4>
         </div>
         <div class="col-sm-6">
             <h4>Address:</h4>
