created array for how to display star ratings

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,8 +9,7 @@
 	 <link rel="stylesheet" href="/css/style.css" type="text/css" />
 	 <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 	 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-	 
-	
+	 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">	
 	<script src="https://code.jquery.com/jquery.js"></script>
 	{{!-- <script src="/js/venueSearch.js"></script>
 	<script src="/js/venueResult.js"></script>
