--- a/views/select.handlebars
+++ b/views/select.handlebars
@@ -60,8 +60,22 @@
                 <div class="row" id="reviewArea">
                     <div class="container">
                         <strong>{{this.name_author}}</strong>
-                        <br /> Rating: {{this.rating_venue}}
-                        <br /> {{this.category}}
+                        <br />
+                        <div>
+                            {{#each this.stars}} {{#if this.checked}} {{!--
+                            <span>1 </span> --}}
+                            <span>
+                                <i class="fas fa-star"></i>
+                            </span>
+                            {{else}} {{!--
+                            <span>2 </span> --}}
+                            <span>
+                                <i class="far fa-star"></i>
+                            </span>
+                            {{/if}} {{/each}}
+                        </div>
+                        {{!--
+                        <br /> Rating: {{this.rating_venue}} --}} {{this.category}}
                         <br /> {{this.content}}
                     </div>
                 </div>
