--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 @-ms-viewport{
     width: device-width;
   }
+
  
  body  { 
      background-image: url("images/venUserBackground.png");
@@ -9,7 +10,14 @@
      background-color: grey;
  }
 
+ #mainbody  {
+    width: 100%;
+    height: 100%;  
+ }
+
  #mainCard  {
+     width: 100%;
+     height: 100%;
     font-family: 'Amatic SC', cursive;
     font-style: bold;
 
@@ -17,29 +25,38 @@
 
  #mainPageHeaderFont {
     color: white;
-    font-size: 10rem;
+    font-size: 9.375rem;
     font-family: 'Permanent Marker', cursive; 
     
  }
 
  #mainPageHeader {
     color: white;
-    font-size: 10rem;
-    font-family: 'Permanent Marker', cursive;
+    font-size: 9.375rem;
+    font-family: 'Permanent Marker', cursive; 
     margin-top: 20px;
     
  }
 
  #resultTable  {
 
-    width: 800px;
-    height: 600px;
-    margin-left: 230px;
+    width: 100%;
+    height: 100%;
+    font-family: 'Amatic SC', cursive;
+    font-style: bold;
+    /* margin-left: 230px; */
+
+ }
+  
+th {
+
+    font-size: 2rem;
+
 
  }
 
  .card-title  {
-     font-size: 75px;
+     font-size: 4.5rem;
      text-align: center;
 
  }
@@ -52,24 +69,24 @@
 label  {
     font-family: 'Amatic SC', cursive;
     font-style: bold;
-    font-size: 40px;
+    font-size: 2.5rem;
 
 
 }
  #searchSubmit { 
     width:200px;
     height: 55px; 
-    margin-left: 150px; 
+    margin-left: 15px;  
     font-family: 'Amatic SC', cursive;
     font-style: bold;
-    font-size: 30px;
+    font-size: 2rem;
     text-decoration: center;
  }
 
  #city, #state, #venue  {
     font-family: 'Amatic SC', cursive;
     font-style: bolder;
-    font-size: 30px;
+    font-size: 2rem;
  }
 
 
@@ -78,9 +95,12 @@ label  {
 
     font-family: 'Amatic SC', cursive;
      font-style: bolder; 
-    /* font-weight:700; */
+    
  }
 
+ h2 {
+     font-size: 1rem;
+ }
  a  {
     font-family: 'Amatic SC', cursive;
     font-style: bold;
@@ -100,6 +120,10 @@ label  {
      border-left: 10px, color, black;
  }
 
+ .hidden {
+    display:none;
+}
+
  #reviewHeader  {
     text-decoration: underline; 
     background-color: white;
@@ -108,3 +132,62 @@ label  {
     border-bottom: 10px, color, black;
     border-left: 10px, color, black; 
  }
+
+ @media screen and (max-width: 600px) {
+    
+    
+    #mainPageHeaderFont {
+        color: white;
+        font-size: 3rem;
+        font-family: 'Permanent Marker', cursive; 
+        
+     }
+    
+     .card-title {
+        font-size: 1.75rem;
+        font-family: 'Amatic SC', cursive;
+        font-style: bolder; 
+        
+     }   
+     
+     #mainPageHeader {
+
+        margin-top: 15px;
+     }   
+      
+     #mainCard   {
+         height: 240%;
+         width: 100%;
+         margin-bottom: 5%;
+
+     } 
+    
+     .card  {
+         height: 240%;
+         width: 100%;
+     }
+
+     label  {
+        font-family: 'Amatic SC', cursive;
+        font-style: bold;
+        font-size: 1.75rem;
+    }
+
+
+    #searchSubmit {
+        margin-left: 15%;
+        margin-top: 5%;
+
+    }
+
+    #resultTable  {
+
+        width: 90%;
+        height: 100%;
+    } 
+    
+  
+}
+
+
+
