a few small fixes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,7 +19,7 @@
                     <input type="search" class="form-control" name="state" id="state">
                     <label for="venue">Venue:</label>
                     <input type="search" class="form-control" name="venue" id="venue">
-                    <button type="button" class="btn btn-secondary btn-lg" id="searchSubmit" 
+                    <button type="submit" class="btn btn-secondary btn-lg" id="searchSubmit" 
                     type="submit">
                     <strong>SUBMIT SEARCH</strong>
                         </button>
