--- a/views/select.handlebars
+++ b/views/select.handlebars
@@ -21,7 +21,7 @@
                     <input type="search" class="form-control" name="state" id="newState">
                     <label for="venue">Venue:</label>
                     <input type="search" class="form-control" name="venue" id="newVenue">
-                    <input class="btn btn-secondary btn-lg" id="newSearchSubmit" type="submit">
+                    <input type="submit" class="btn btn-secondary btn-lg" id="newSearchSubmit">
                 </form>
             </div>
         </div>
