--- a/views/select.handlebars
+++ b/views/select.handlebars
@@ -33,7 +33,11 @@
     <div class="row">
         <div class="col-sm-6">
             <h1>{{venueObj.venueInfo.name}}</h1>
+            {{#if venueObj.venueRating}}
             <h4>Rating: {{venueObj.venueRating}}</h4>
+            {{else}}
+            <h4>Rating: Not Yet Rated</h4>
+            {{/if}}
             <h4>
                 <a href="{{venueObj.venueInfo.url}}" target="blank">{{venueObj.venueInfo.url}}</a>
             </h4>
